Fix game-background height from 'jumping' on small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,7 @@ section h2 {
   border-radius: 2rem;
   width: 90%;
   max-width: 50rem;
-  min-height: 50vh;
+  min-height: 30rem;
   margin: 5% auto 1rem;
   padding: 0 0.5em 2rem;
   position: relative;
